Fixed layout problems

--- a/web/htdocs/pages.css
+++ b/web/htdocs/pages.css
@@ -271,6 +271,10 @@ table.data tr.data td.checkbox {
     width: 20px;
     text-align: center;
 }
+table.data tr.data td.checkbox input {
+    margin: 0px;
+}
+
 table.data th input.checkgroup {
     height: 12px;
     width: 16px;
